<resources>
    <string name="app_name">AndroidToolBox</string>

    <string name="login_connection">Connexion</string>
    <string name="login_validate">Valider</string>
    <string name="login_login">Identifiant</string>
    <string name="login_password">Mot de passe</string>

    <string name="home_welcome">Bonjour</string>
    <string name="home_lifecycle">Cycle de vie</string>
    <string name="home_save">Sauvegarde</string>
    <string name="home_permission">Permissions</string>
    <string name="home_webservices">Webservices</string>

    <string name="hello_fragment">Bonjour fragment</string>
    <string name="storage_title">Accès au fichier</string>
    <string name="storage_name">Nom : &#160;</string>
    <string name="storage_first_name">Prenom : &#160;</string>
    <string name="storage_date">Date : &#160;</string>
    <string name="storage_age">Age : &#160;</string>
    <string name="storage_show">lecture</string>

    <string name="permission_title">Accès aux informations Android</string>
    <string name="permission_loading">Chargement de la position …</string>
    <string name="permission_location">Latitude : %1$f \nLongitude : %2$f</string>


</resources>
