<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="fr.isen.mollinari.androidtoolbox.activity.HomeActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/isen_logo" />

    <TextView
        android:id="@+id/tvBonjour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/home_welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <ImageView
        android:id="@+id/ivCdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        app:layout_constraintEnd_toStartOf="@+id/ivData"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBonjour"
        app:srcCompat="@android:drawable/stat_notify_chat" />

    <ImageView
        android:id="@+id/ivData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:background="@color/colorPrimary"
        android:cropToPadding="false"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivCdv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivCdv"
        app:layout_constraintTop_toTopOf="@+id/ivCdv"
        app:srcCompat="@android:drawable/stat_notify_sdcard" />

    <TextView
        android:id="@+id/tvCdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_lifecycle"
        app:layout_constraintEnd_toEndOf="@+id/ivCdv"
        app:layout_constraintStart_toStartOf="@+id/ivCdv"
        app:layout_constraintTop_toBottomOf="@+id/ivCdv" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_save"
        app:layout_constraintEnd_toEndOf="@+id/ivData"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/ivData"
        app:layout_constraintTop_toTopOf="@+id/tvCdv" />

    <ImageView
        android:id="@+id/ivPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        app:layout_constraintEnd_toStartOf="@+id/ivWebservice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCdv"
        app:srcCompat="@android:drawable/stat_sys_speakerphone" />

    <ImageView
        android:id="@+id/ivWebservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivPermission"
        app:layout_constraintTop_toTopOf="@+id/ivPermission"
        app:srcCompat="@android:drawable/stat_sys_download" />

    <TextView
        android:id="@+id/tvPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_permission"
        app:layout_constraintEnd_toEndOf="@+id/ivPermission"
        app:layout_constraintStart_toStartOf="@+id/ivPermission"
        app:layout_constraintTop_toBottomOf="@+id/ivPermission" />

    <TextView
        android:id="@+id/tvWebservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_webservices"
        app:layout_constraintEnd_toEndOf="@+id/ivWebservice"
        app:layout_constraintStart_toStartOf="@+id/ivWebservice"
        app:layout_constraintTop_toTopOf="@+id/tvPermission" />

    <ImageView
        android:id="@+id/ibDeconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:onClick="logOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_power_off" />
</android.support.constraint.ConstraintLayout>
